--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ astroid==2.8.5
 black==21.10b0
 click==8.0.3
 colorama==0.4.4
+dj-database-url==0.5.0
 Django==3.2.9
 django-crispy-forms==1.13.0
 django-widget-tweaks==1.4.9
