--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ click==8.0.3
 colorama==0.4.4
 dj-database-url==0.5.0
 Django==3.2.9
+django-appconf==1.0.5
 django-crispy-forms==1.13.0
+django-select2==7.9.0
 django-widget-tweaks==1.4.9
 flake8==4.0.1
 gunicorn==20.1.0
