--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,15 @@ astroid==2.8.5
 billiard==3.6.4.0
 black==21.10b0
 celery==5.2.1
+certifi==2021.10.8
 cffi==1.15.0
+charset-normalizer==2.0.8
 click==8.0.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 colorama==0.4.4
+cryptography==36.0.0
 Deprecated==1.2.13
 dj-database-url==0.5.0
 Django==3.2.9
@@ -17,35 +20,45 @@ django-appconf==1.0.5
 django-celery-results==2.2.0
 django-crispy-forms==1.13.0
 django-select2==7.9.0
+django-storages==1.12.3
 django-widget-tweaks==1.4.9
 dnspython==2.1.0
+dropbox==11.25.0
 flake8==4.0.1
 gevent==21.8.0
 greenlet==1.1.2
 gunicorn==20.1.0
+idna==3.3
 isort==5.10.1
 kombu==5.2.2
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
 mypy-extensions==0.4.3
+ndg-httpsclient==0.5.1
 pathspec==0.9.0
 platformdirs==2.4.0
+ply==3.11
 prompt-toolkit==3.0.23
 psycopg2==2.9.2
+pyasn1==0.4.8
 pycodestyle==2.8.0
 pycparser==2.21
 pyflakes==2.4.0
 pylint==2.11.1
 pylint-django==2.4.4
 pylint-plugin-utils==0.6
+pyOpenSSL==21.0.0
 pytz==2021.3
 redis==4.0.2
 regex==2021.11.10
+requests==2.26.0
 six==1.16.0
 sqlparse==0.4.2
+stone==3.2.1
 toml==0.10.2
 tomli==1.2.2
 typing_extensions==4.0.0
+urllib3==1.26.7
 vine==5.0.0
 wcwidth==0.2.5
 whitenoise==5.3.0
